--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     
     <!-- Cabeçalho do site -->
     <header>
-        <div class="logo">
-            <img src="imagens/logo.png" alt="Logo 20 Comer Lanches">
+        <div class="logo"> <!-- logo do site-->
+            <img src="./img/Captura de tela 2024-11-03 112626.png" alt="Logo 20 Comer Lanches">
         </div>
         <nav>
             <ul>
