alteração no icone

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>20 Comer Lanches</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="./img/Captura de tela 2024-11-03 112626.png" type="image/x-icon">
+
 </head>
 <body>
 
