reorganização dos códigos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>20 Comer Lanches</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="./img/Captura de tela 2024-11-03 112626.png" type="image/x-icon">
-
 </head>
 <body>
 
@@ -15,7 +14,7 @@
     
     <!-- Cabeçalho do site -->
     <header>
-        <div class="logo"> <!-- logo do site-->
+        <div class="logo">
             <img src="./img/Captura de tela 2024-11-03 112626.png" alt="Logo 20 Comer Lanches">
         </div>
         <nav>
@@ -80,27 +79,28 @@
         </div>
         <!-- Mapa do Google Maps -->
         <div class="mapa-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3973.8477613821037!2d-42.78888772414313!3d-5.128213551896484!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x78e36d2d62a2257%3A0x3e3017cc64b7c7af!2sR.%20Quinze%20de%20Novembro%2C%203043%20-%20Morada%20Nova%2C%20Teresina%20-%20PI%2C%2064023-274!5e0!3m2!1spt-BR!2sbr!4v1730583023898!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3973.8477613821037!2d-42.78888772414313!3d-5.128213551896484!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x78e36d2d62a2257%3A0x3e3017cc64b7c7af!2sR.%20Quinze%20de%20Novembro%2C%203043%20-%20Morada%20Nova%2C%20Teresina%20-%20PI%2C%2064023-274!5e0!3m2!1spt-BR!2sbr!4v1730583023898!5m2!1spt-BR!2sbr" 
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
-   <!-- Ícone do WhatsApp -->
-<a href="https://wa.me/+5586999067310" class="whatsapp-link" target="_blank">
-    <img src="./img/whatsapp_2504957.png" alt="WhatsApp">
-</a>
+    <!-- Ícone do WhatsApp -->
+    <a href="https://wa.me/+5586999067310" class="whatsapp-link" target="_blank">
+        <img src="./img/whatsapp_2504957.png" alt="WhatsApp">
+    </a>
 
-<!-- Ícone do Instagram -->
-<a href="https://www.instagram.com/20comerlanches" class="instagram-link" target="_blank">
-    <img src="./img/1298747_instagram_brand_logo_social media_icon.png" alt="Instagram">
-</a>
-
+    <!-- Ícone do Instagram -->
+    <a href="https://www.instagram.com/20comerlanches" class="instagram-link" target="_blank">
+        <img src="./img/1298747_instagram_brand_logo_social media_icon.png" alt="Instagram">
+    </a>
 
     <!-- Rodapé do site -->
     <footer>
         <p>&copy; (Desde 2022) <span class="destaque">20 Comer Lanches</span> - Todos os direitos reservados</p>
-       
     </footer>
-<!-- Scripts JavaScript -->
-<script src="js/script.js"></script>
+
+    <!-- Scripts JavaScript -->
+    <script src="js/script.js"></script>
+
 </body>
 </html>
